# fbmessenger-api-hs

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  fbmessenger-api.cabal  haskell-fb-messenger-api.cabal  stack.yaml
example-app/: example.hs
src/Servant/Client/: MultipartFormData.hs
src/Web/FBMessenger/API/: Bot.hs
src/Web/FBMessenger/API/Bot/: API.hs  Data.hs  JsonExt.hs  Requests.hs  Responses.hs  SendAPI.hs  WebHookRequests.hs  WebhookAPI.hs  WebhookRequests.hs
src/Web/FBMessenger/Api/Bot/: JsonExt.hs
test/: RequestsSpec.hs  ResponsesSpec.hs  WebHookRequestsSpec.hs  WebhookAPISpec.hs  WebhookRequestsSpec.hs
test-files/: buttonTemplate.json  deleteWelcomeMessage.json  errorResponse.json  genericTemplate.json  imageMessage.json  receiptTemplate.json  textMessage.json  userProfileInfoResponse.json  welcomeStructuredMessage.json  welcomeTextMessage.json  wsAuthRequest.json  wsDeliveryRequest.json  wsPostbackRequest.json  wsStructuredMessageRequest.json  wsTextMessageRequest.json
