name:                fbmessenger-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mseri/fbmessenger-api#readme
license:             BSD3
license-file:        LICENSE
author:              Marcello Seri
maintainer:          marcello.seri@gmail.com
copyright:           2016 Marcello Seri, Federico Rampazzo
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Web.FBMessenger.API.Bot
                     , Web.FBMessenger.API.Bot.API
                     , Web.FBMessenger.API.Bot.Data
                     , Web.FBMessenger.API.Bot.Responses
                     , Web.FBMessenger.API.Bot.Requests
  other-modules:       Web.FBMessenger.API.Bot.JsonExt
  build-depends:       base >= 4.7 && < 5
                     -- below this line in alphabetical order
                     , aeson
                     , bytestring
                     , http-client
                     , servant == 0.7.*
                     , servant-client == 0.7.*
                     , text
                     , transformers
  default-language:    Haskell2010

test-suite fbmessenger-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fbmessenger-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://mseri@bitbucket.org/bad4ss/haskell-fb-messenger-api.git
